Added WithoutAttribute extension methods.

--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -33,9 +33,13 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EnumerableExtensions">
+      <HintPath>..\packages\EnumerableExtensions.2.3\lib\portable-net4+sl5+wp8+win8\EnumerableExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExplicitConversionAttribute.cs" />
     <Compile Include="RuntimeContractExtensions.cs" />
     <Compile Include="GetMethods.cs" />
     <Compile Include="GetProperties.cs" />
@@ -44,6 +48,9 @@
     <Compile Include="SelectAttribute.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="WithAttribute.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
