--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Contracts\OpSide.cs" />
     <Compile Include="Contracts\ProxyInfo.cs" />
     <Compile Include="Contracts\RuntimeContractExtensions.cs" />
+    <Compile Include="Contracts\SpecialConversionAttribute.cs" />
+    <Compile Include="Contracts\SpecialOperations.cs" />
     <Compile Include="Contracts\SubtractionAttribute.cs" />
     <Compile Include="GetMethods.cs" />
     <Compile Include="GetProperties.cs" />
