--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -60,6 +60,7 @@
     <Compile Include="SelectAttribute.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="WithAttribute.cs" />
+    <Compile Include="WithoutAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
