--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -63,6 +63,7 @@
     <Compile Include="AssemblyLoader.cs" />
     <Compile Include="SelectAttribute.cs" />
     <Compile Include="TypeExtensions.cs" />
+    <Compile Include="Variance.cs" />
     <Compile Include="WithAttribute.cs" />
     <Compile Include="WithoutAttribute.cs" />
   </ItemGroup>
