--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Contracts\SubtractionAttribute.cs" />
     <Compile Include="GetMethods.cs" />
     <Compile Include="GetProperties.cs" />
+    <Compile Include="IsDelegate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyLoader.cs" />
     <Compile Include="SelectAttribute.cs" />
