Fixed a bug with generics support, added simpler thread safety for proxy cache.

--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -33,8 +33,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EnumerableExtensions">
-      <HintPath>..\packages\EnumerableExtensions.2.3\lib\portable-net4+sl5+wp8+win8\EnumerableExtensions.dll</HintPath>
+    <Reference Include="EnumerableExtensions, Version=2.4.5417.26765, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EnumerableExtensions.2.4\lib\portable-net4+sl5+wp8+win8\EnumerableExtensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
