Moved some methods to their own files.

--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Contracts\SpecialConversionAttribute.cs" />
     <Compile Include="Contracts\SpecialOperations.cs" />
     <Compile Include="Contracts\SubtractionAttribute.cs" />
+    <Compile Include="GetAbstractMethods.cs" />
+    <Compile Include="GetGenericMethods.cs" />
     <Compile Include="GetInheritedInterfaceMembers.cs" />
     <Compile Include="GetMethods.cs" />
     <Compile Include="GetProperties.cs" />
