--- a/TinyReflectiveToolkitTests/TinyReflectiveToolkitTests.csproj
+++ b/TinyReflectiveToolkitTests/TinyReflectiveToolkitTests.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts.cs" />
+    <Compile Include="ContractsDeclarations.cs" />
+    <Compile Include="ContractsTypes.cs" />
     <Compile Include="TypeExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
