Added a few more assertions to the Addables test.

--- a/TinyReflectiveToolkitTests/TinyReflectiveToolkitTests.csproj
+++ b/TinyReflectiveToolkitTests/TinyReflectiveToolkitTests.csproj
@@ -58,7 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts.cs" />
+    <Compile Include="ContractsTests.cs" />
     <Compile Include="ContractsDeclarations.cs" />
     <Compile Include="ContractsTypes.cs" />
     <Compile Include="TypeExtensionsTests.cs" />
