--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Contracts\AdditionAttribute.cs" />
     <Compile Include="Contracts\ContractProvider.cs" />
     <Compile Include="Contracts\CastAttribute.cs" />
+    <Compile Include="Contracts\ContractUnsatisfiedException.cs" />
     <Compile Include="Contracts\DivisionAttribute.cs" />
     <Compile Include="Contracts\EqualityAttribute.cs" />
     <Compile Include="Contracts\ExposeBinaryOperatorAttribute.cs" />
