--- a/nuget/TinyReflectiveToolkit.nuspec
+++ b/nuget/TinyReflectiveToolkit.nuspec
@@ -2,14 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>TinyReflectiveToolkit</id>
-        <version>0.3</version>
+        <version>0.4</version>
         <title>Tiny Reflective Toolkit</title>
         <authors>Theodoros Chatzigiannakis</authors>
 		<licenseUrl>https://www.mozilla.org/MPL/2.0/</licenseUrl>
 		<projectUrl>http://tchatzigiannakis.github.io/TinyReflectiveToolkit/</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>A small library containing utilities related to reflection under the CLR.</description>
-        <releaseNotes>Runtime-enforced structural contracts.</releaseNotes>
+        <releaseNotes>Structural contracts enforced at runtime, more extension methods.</releaseNotes>
         <copyright>(c) 2014 - Theodoros Chatzigiannakis</copyright>
         <tags>C# Reflection Structural</tags>
     </metadata>
