--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -77,7 +77,9 @@
     <Compile Include="GetMethods.cs" />
     <Compile Include="GetOperators.cs" />
     <Compile Include="GetProperties.cs" />
+    <Compile Include="HasAttribute.cs" />
     <Compile Include="IsDelegate.cs" />
+    <Compile Include="IsExtensionMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyLoader.cs" />
     <Compile Include="SelectAttribute.cs" />
