Added ILHelper class to start refactoring ContractProvider.

--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -78,6 +78,7 @@
     <Compile Include="GetOperators.cs" />
     <Compile Include="GetProperties.cs" />
     <Compile Include="HasAttribute.cs" />
+    <Compile Include="IL\ILHelper.cs" />
     <Compile Include="IsDelegate.cs" />
     <Compile Include="IsExtensionMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
