--- a/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
+++ b/TinyReflectiveToolkit/TinyReflectiveToolkit.csproj
@@ -33,11 +33,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EnumerableExtensions, Version=2.4.5417.26765, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="System" />
+    <Reference Include="EnumerableExtensions">
       <HintPath>..\packages\EnumerableExtensions.2.4\lib\portable-net4+sl5+wp8+win8\EnumerableExtensions.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\AdditionAttribute.cs" />
@@ -87,6 +86,7 @@
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="WithAttribute.cs" />
     <Compile Include="WithoutAttribute.cs" />
+    <Compile Include="GetExtensionMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
